@@ -18,6 +18,7 @@ void testAppearance(Controller& ctl);
 void testLookQueue(Controller& ctl);
 void testEntityCreation(Controller& ctl);
 void testUnseen(Controller& ctl);
+void testTasks(Controller& ctl);
 
 class WaitForAppearance : public SigC::Object
 {
